# ECE450_software

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_LONG.md  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
config/: co5300_init.json  display_state.example.json  odor-sensing.example.toml  odor-sensing.rpi5-tgs-only.toml  odor-sensing.rpi5.toml  rpi5.toml
docs/: CO5300_DASHBOARD.md  CO5300_RPI_QSPI.md
include/: config.h  error_flags.h  sensor_types.h
include/app/: LinuxHardwareValidation.h  RuntimeConfig.h
include/drivers/: ADS114S06Driver.h  BME690Driver.h  MCP3421Driver.h  SGP41Driver.h  SHT45Driver.h
include/hardware/: HardwareResult.h  IGpioLine.h  II2CBus.h  ISPIDevice.h
include/hardware/linux/: LinuxGpioLine.h  LinuxI2CBus.h  LinuxSPIDevice.h
include/hardware/mock/: MockGpioLine.h  MockI2CBus.h  MockSPIDevice.h
include/protocol/: ProtocolUtils.h
include/services/: RawCsvLogger.h  SensorManager.h  TgsCsvLogger.h
pcb1/: BOM_PCB1_Schematic2_2026-07-23.xlsx  BOM_PCB1_电化学_2026-07-23.xlsx  Netlist_Schematic2_2026-07-23.tel
pcb2/: BOM_Board1_Schematic1_2026-07-23.xlsx  BOM_Board1_TGS26系列PCB_2026-07-23.xlsx  Netlist_TGS26系列PCB_2026-07-23.tel
src/: main.cpp
src/app/: LinuxHardwareValidation.cpp  RuntimeConfig.cpp
src/drivers/: ADS114S06Driver.cpp  BME690Driver.cpp  MCP3421Driver.cpp  SGP41Driver.cpp  SHT45Driver.cpp
src/enose/: __init__.py  _bme69xmodule.c  acquisition.py  ads7828.py  bme690.py  cli.py  config.py  csv_logger.py  i2c_bus.py  mcp3421.py  records.py  sgp41.py  sht45.py
src/enose/_vendor/bme690/: bme69x.c  bme69x.h  bme69x_defs.h
src/hardware/linux/: LinuxGpioLine.cpp  LinuxI2CBus.cpp  LinuxSPIDevice.cpp
src/hardware/mock/: MockGpioLine.cpp  MockI2CBus.cpp  MockSPIDevice.cpp
src/protocol/: ProtocolUtils.cpp
src/services/: RawCsvLogger.cpp  SensorManager.cpp  TgsCsvLogger.cpp
tests/: conftest.py  test_acquisition_csv.py  test_ads7828.py  test_bme690.py  test_mcp3421.py  test_sensirion.py
tests/unit/: DriverProtocolTest.cpp  SensorManagerSmokeTest.cpp
tools/: co5300_dashboard.py  co5300_qspi_test.py  log_tgs_to_excel.py  run_co5300_dashboard.sh  run_co5300_qspi.sh
