[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bosch-enose"
version = "0.1.0"
description = "Compact Raspberry Pi data acquisition for the Bosch E-nose prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sensirion-gas-index-algorithm==3.2.2",
    "smbus2>=0.4.3",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
enose = "enose.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
